Яндекс Книги python.ipynb

--- a/Яндекс Книги гитхаб.ipynb
+++ b/Яндекс Книги гитхаб.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "## Содержимое проекта\n",
     "\n",
-    "<font color='#777778'>Перечислите основные шаги проекта или напишите оглавление. Используйте описание проекта, чтобы зафиксировать основные шаги.</font>\n",
+    "<font color='#777778'></font>\n",
     "\n",
     "1. Загрузить данные и познакомиться с ними.\n",
     "2. Проверить наличие дубликатов в идентификаторах пользователей\n",
